nodePort.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: phpk8s
spec:
  selector:
    matchLabels:
      type: app
      service: phpk8s
  template:
    metadata:
      labels:
        type: app
        service: phpk8s
    spec:
      containers:
      - name: phpk8s
        image: soft2dev/php-docker-heml:latest
        ports:
        - containerPort: 80
          protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: phpk8s
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    type: app
    service: phpk8s
